src/css/main.scss
$titleColor: #db7500;
$textColor: black;
$black: #1b2642;
$myViolet: #874EDD;
$myOrange: #FDC132;

body {
	font-family: Roboto;
	padding: 0; 
	margin: 0;
	align-items: center;
	justify-content: center;
	text-align: center;
	background: #E5E5E5;
	display: flex;
	color: $textColor;
}

/* ----------- COMPONENTS ----------- */

.box {
	background-color: $myViolet;
	border-radius: 2px;
	color: white;

	margin-top: auto;
	margin-bottom: auto;

	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.rankingNumber {
	font-family: Lato;
	font-style: normal;
	font-weight: 900;
	font-size: 20px;
	line-height: 20px;

	color: $myOrange;

	display: flex;
	align-items: center;
	text-align: center;
}

.highlightedRankingNumber {
	font-size: 35px;
	color: $myViolet;
}

/* ----------- SECTION ----------- */

.section {
	background-color: white;
	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
	padding: 25px;
}
.sectionTitle {
	color: #464646;
	font-style: normal;
	font-weight: bold;
	font-size: 16px;
	line-height: 20px;

	margin: 0;

	text-align: left;
}

/* ----------- TOP DES CITATIONS ----------- */

#topCitations { 
	width: 467px;
	height: 90%;
	margin: auto;

	display: flex;
	flex-direction: column;

	.box {
		width: 65px;
		height: 65px;
		font-size: 15px;
		.nbLikes {
			font-size: 16px;
		}
	}
}

.citationText {
	font-style: italic;
	font-weight: normal;
	font-size: 11.3px;
	line-height: 10px;
	text-align: justify;

	color: #757575;
	flex-grow: 1;
}
.citationAuthor {
	font-style: normal;
	font-weight: normal;
	font-size: 10px;
	line-height: 10px;
	color: #BEBEBE;
	align-self: flex-start;
}

.citationContainer {
	margin-top: 20px;
	width: 95%;
	height: auto;

	display: grid;
	grid-template-columns: 10% 17% 73%;
	
	.rankingNumber {
		grid-column-start: 1;
	}
	.box {
		grid-column-start: 2;
	}
	.citationTextAndAuthor {
		grid-column-start: 3;
	}
}

.citationTextAndAuthor {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
}

.pageNavigation {
	margin-top: auto;
	font-size: 9px;
	color: #6C6C6C;

	display: flex;
	justify-content: center;
	.pageNavInput {
		margin-right: 5px;
	}
	.pageNavButtons {
		display: flex;
	}

	input {
		width: 25px;
		height: 14px;
		border: 1px solid #DDDDDD;
		box-sizing: border-box;
		border-radius: 2px;
		font-size: 9px;
		font-family: Roboto;
		padding: 3px;
		color: #6C6C6C;
	}
	button {
		background-color: $myViolet;
		color: white;
		border-radius: 2px;

		width: 14px;
		height: 14px;
		margin: 0 1px;

		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;

		border: none;
		outline: none;
		transition: .2s;
	  
		&:active {
			background: $myOrange;
		}
		&:hover {
			background: $myOrange;
		}
		&:disabled {
			/*visibility: hidden;*/
			background: white;
		}
	}
}

.citationsList {
	height: 510px;
   	overflow: auto;
}

